ref: cleaned up css

--- a/Forum/Components/Comment.razor
+++ b/Forum/Components/Comment.razor
@@ -22,7 +22,7 @@
 	}
 </style>
 
-<div class="second needs-padding border-left @_collapseClass">
+<div class="main needs-padding border-left @_collapseClass">
 	<p class="p-annotation-sm">
 		<a href="/user/@CommentModel.Creator.AccountName">@CommentModel.Creator.AccountName</a>
 		@CommentModel.Created.ToString("t"), @CommentModel.Created.ToString("d")
