--- a/Forum/Components/ThreadPreview.razor
+++ b/Forum/Components/ThreadPreview.razor
@@ -7,7 +7,7 @@
 		@ThreadModel.Creator.AccountName@@@ThreadModel.Forum.Name
 		@ThreadModel.Created.ToString("t"), @ThreadModel.Created.ToString("d")
 	</p>
-	<h5 class="txt-title">@ThreadModel.Title</h5>
+	<h5>@ThreadModel.Title</h5>
 	<MarkdownView Content="@Content" />
 	@* <pre class="main">@Content</pre> *@
 	@{
