--- a/Forum/Pages/Index.razor
+++ b/Forum/Pages/Index.razor
@@ -13,7 +13,7 @@
 			<div class="main needs-padding">
 				@* <img width="50" height="50" src="/css/icons/Default.jpg" alt="Profile Image" /> *@
 				<h4>Hello, @_displayName</h4>
-				<p class="p-annotation-lg">Logged in as: @_accountName</p>
+				<p>Logged in as: @_accountName</p>
 				<div class="row btn-select">
 					<button @onclick='() => NavMan.NavigateTo("/")' class="btn-col-light btn-hover-accent btn-left">Home</button>
 					<button @onclick='() => NavMan.NavigateTo("/login")' class="btn-col-light btn-hover-accent btn-right">Logout</button>
