--- a/Forum/Pages/Admin.razor
+++ b/Forum/Pages/Admin.razor
@@ -37,7 +37,7 @@
         @switch (Page)
         {
             case "forum":
-                <div class="main col form-sim ml-auto mr-auto text-center form-bigger">
+                <div class="main col ml-auto mr-auto text-center form-bigger">
                     <h4>Update Forum</h4>
                     <select class="form-control" @bind="_selectedForumId">
                         @foreach (var forum in _fora)
@@ -51,22 +51,22 @@
                     <p>Threadcount: @selectedForum.Threads.Count</p>
                     <textarea class="form-control" @bind="_updateForumDescription" >@selectedForum.Description</textarea>
                     <div class="row">
-                        <button class="accent-red btn-bottom-left" @onclick="DeleteForumAsync">Delete Forum</button>
-                        <button class="accent-blue btn-bottom-right" @onclick="UpdateForumAsync">Update Forum</button>
+                        <button class="accent-red btn-left" @onclick="DeleteForumAsync">Delete Forum</button>
+                        <button class="accent-blue btn-right" @onclick="UpdateForumAsync">Update Forum</button>
                     </div>
                 </div>
 
-                <div class="main col form-sim ml-auto mr-auto text-center form-bigger mt-5">
+                <div class="main col ml-auto mr-auto text-center form-bigger mt-5">
                     <h4>Create Forum</h4>
                     <input type="text" placeholder="Name" @bind="_newForumName" class="form-control"/>
                     <textarea placeholder="Description" class="form-control" @bind="_newForumDescription"></textarea>
                     <div class="row">
-                        <button class="accent-blue btn-bottom-left btn-bottom-right" @onclick="AddForumAsync">Add Forum</button>
+                        <button class="accent-blue btn-bottom-left btn-right" @onclick="AddForumAsync">Add Forum</button>
                     </div>
                 </div>
                 break;
             case "users":
-                <div class="main col form-sim ml-auto mr-auto text-center form-bigger">
+                <div class="main col ml-auto mr-auto text-center form-bigger">
                     <h4>Users: @_userCount</h4>
                     <input class="form-control" type="text" placeholder="Accountname" @bind="_searchUser" />
                     <button class="accent-blue form-control" @onclick="SearchUserAsync" >Search user</button>
@@ -88,7 +88,7 @@
                             <input style="display: inline-block; width: 0; flex-grow: 3; margin-right: 1rem; padding: 5px;" type="checkbox" @bind="@_updateSetBlocked" class="form-control"/>
                         </div>
                         <div class="row">
-                            <button class="accent-blue btn-bottom-left btn-bottom-right" @onclick="UpdateUserAsync">Update User</button>
+                            <button class="accent-blue btn-bottom-left btn-right" @onclick="UpdateUserAsync">Update User</button>
                         </div>
                     }
                 </div>
