Several bug fixes and refactoring

--- a/Forum/Components/Comment.razor
+++ b/Forum/Components/Comment.razor
@@ -4,7 +4,7 @@
 
 <style>
 	.border-left {
-		border-left: 2px solid #9BAEC8 !important;
+		border-left: 2px solid #ebdbb2 !important;
 		border-radius: 0;
 	}
 
@@ -73,7 +73,7 @@
 	}
 
 	/// <summary>
-	/// Hides the comment field.
+	/// Hide the comment field.
 	/// </summary>
 	private void CloseCommentField()
 	{
@@ -81,7 +81,7 @@
 	}
 
 	/// <summary>
-	/// Unhides the comment field.
+	/// Show the comment field.
 	/// </summary>
 	private void OpenCommentField()
 	{
