--- a/Forum/Components/InfoMessage.razor
+++ b/Forum/Components/InfoMessage.razor
@@ -6,7 +6,6 @@
 <style>
 	#helper-container {
 		position: absolute;
-		@*top: 0; right: 0; bottom: 0; left: 0;*@
 		bottom: 5%; right: 0; left: 0;
 		margin: auto;
 		width: 25rem;
@@ -14,8 +13,9 @@
 		line-height: 5rem;
 		text-align: center;
 
-		background: #909090;
-		border: 2px groove #ffffff;
+		background: #282828;
+		color: #ebdbb2;
+		border: 2px solid #98971A;
 	}
 
 	#txt-span {
