ref: coding style.

--- a/Forum/Pages/User.razor
+++ b/Forum/Pages/User.razor
@@ -195,7 +195,7 @@ else
 		
 		var newMsg = new Entity.ChatMessage
 		{
-			Parent = null, // parse using @ ?
+			Parent = null, // TODO: Use reuse thread comments
 			Sender = loggedUser,
 			Content = _sendMsg
 		};
